--- a/spots.html
+++ b/spots.html
@@ -36,18 +36,18 @@
             <tr>
               <td>Месяц</td>
               <td class="wind-stat">Количество ветровых дней</td>
-              <td>Дневная темп.</td>
-              <td>Ночная темп.</td>
+              <td>Дневная темп. °С</td>
+              <td>Ночная темп.&nbsp;°С</td>
             </tr>
             <tr>
               <td>Январь</td>
               <td>
                 <div class="progress">
-                  <div class="progress-bar bg-7" role="progressbar" style="width: 3.3%" aria-valuenow="3.3" aria-valuemin="0" aria-valuemax="100"></div>
-                  <div class="progress-bar bg-6" role="progressbar" style="width: 6.7%" aria-valuenow="6.7" aria-valuemin="0" aria-valuemax="100"></div>
-                  <div class="progress-bar bg-5" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                  <div class="progress-bar bg-4" role="progressbar" style="width: 33.3%" aria-valuenow="33.3" aria-valuemin="0" aria-valuemax="100"></div>
-                  <div class="progress-bar bg-3" role="progressbar" style="width: 26.6%" aria-valuenow="26.6" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar bg-7" role="progressbar" style="width: 3.1%" aria-valuenow="3.1" aria-valuemin="0" aria-valuemax="100">1</div>
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 6.3%" aria-valuenow="6.3" aria-valuemin="0" aria-valuemax="100">2</div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 18.8%" aria-valuenow="18.8" aria-valuemin="0" aria-valuemax="100">6</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 31.3%" aria-valuenow="31.3" aria-valuemin="0" aria-valuemax="100">10</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 31.3%" aria-valuenow="31.3" aria-valuemin="0" aria-valuemax="100">10</div>
                 </div>
               </td>
               <td>–3</td>
@@ -57,83 +57,145 @@
               <td>Февраль</td>
               <td>
                 <div class="progress">
-                  <div class="progress-bar bg-7" role="progressbar" style="width: 3.3%" aria-valuenow="3.3" aria-valuemin="0" aria-valuemax="100"></div>
-                  <div class="progress-bar bg-6" role="progressbar" style="width: 6.7%" aria-valuenow="6.7" aria-valuemin="0" aria-valuemax="100"></div>
-                  <div class="progress-bar bg-5" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                  <div class="progress-bar bg-4" role="progressbar" style="width: 33.3%" aria-valuenow="33.3" aria-valuemin="0" aria-valuemax="100"></div>
-                  <div class="progress-bar bg-3" role="progressbar" style="width: 26.6%" aria-valuenow="26.6" aria-valuemin="0" aria-valuemax="100"></div>
-                </div></td>
+                  <div class="progress-bar bg-7" role="progressbar" style="width: 3.6%" aria-valuenow="3.6" aria-valuemin="0" aria-valuemax="100">1</div>
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 3.6%" aria-valuenow="3.6" aria-valuemin="0" aria-valuemax="100">1</div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 14.3%" aria-valuenow="14.3" aria-valuemin="0" aria-valuemax="100">4</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 25.0%" aria-valuenow="25.0" aria-valuemin="0" aria-valuemax="100">7</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 35.7%" aria-valuenow="35.7" aria-valuemin="0" aria-valuemax="100">10</div>
+                </div>
+              </td>
               <td>–2</td>
               <td>–3</td>
             </tr>
             <tr>
               <td>Март</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-7" role="progressbar" style="width: 3.1%" aria-valuenow="3.1" aria-valuemin="0" aria-valuemax="100">1</div>
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 3.1%" aria-valuenow="3.1" aria-valuemin="0" aria-valuemax="100">1</div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 18.8%" aria-valuenow="18.8" aria-valuemin="0" aria-valuemax="100">6</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 28.1%" aria-valuenow="28.1" aria-valuemin="0" aria-valuemax="100">9</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 31.3%" aria-valuenow="31.3" aria-valuemin="0" aria-valuemax="100">10</div>
+                </div></td>
               <td>3</td>
               <td>1</td>
             </tr>
             <tr>
               <td>Апрель</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 3.3%" aria-valuenow="3.3" aria-valuemin="0" aria-valuemax="100">1</div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 6.7%" aria-valuenow="6.7" aria-valuemin="0" aria-valuemax="100">2</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 26.7%" aria-valuenow="26.7" aria-valuemin="0" aria-valuemax="100">8</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 46.7%" aria-valuenow="46.7" aria-valuemin="0" aria-valuemax="100">14</div>
+                </div></td>
               <td>8</td>
               <td>5</td>
             </tr>
             <tr>
               <td>Май</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 6.7%" aria-valuenow="6.7" aria-valuemin="0" aria-valuemax="100">2</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 30.0%" aria-valuenow="30.0" aria-valuemin="0" aria-valuemax="100">9</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 43.3%" aria-valuenow="43.3" aria-valuemin="0" aria-valuemax="100">13</div>
+                </div></td>
               <td>14</td>
               <td>10</td>
             </tr>
             <tr>
               <td>Июнь</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 7.7%" aria-valuenow="7.7" aria-valuemin="0" aria-valuemax="100">2</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 30.8%" aria-valuenow="30.8" aria-valuemin="0" aria-valuemax="100">8</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 38.5%" aria-valuenow="38.5" aria-valuemin="0" aria-valuemax="100">10</div>
+                </div></td>
               <td>17</td>
               <td>13</td>
             </tr>
             <tr>
               <td>Июль</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 9.4%" aria-valuenow="9.4" aria-valuemin="0" aria-valuemax="100">3</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 25.0%" aria-valuenow="25.0" aria-valuemin="0" aria-valuemax="100">8</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 37.5%" aria-valuenow="37.5" aria-valuemin="0" aria-valuemax="100">12</div>
+                </div></td>
               <td>21</td>
               <td>17</td>
             </tr>
             <tr>
               <td>Август</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 3.2%" aria-valuenow="3.2" aria-valuemin="0" aria-valuemax="100">1</div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 6.5%" aria-valuenow="6.5" aria-valuemin="0" aria-valuemax="100">2</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 25.8%" aria-valuenow="25.8" aria-valuemin="0" aria-valuemax="100">8</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 38.7%" aria-valuenow="38.7" aria-valuemin="0" aria-valuemax="100">12</div>
+                </div></td>
               <td>20</td>
               <td>17</td>
             </tr>
             <tr>
               <td>Сентябрь</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 9.7%" aria-valuenow="9.7" aria-valuemin="0" aria-valuemax="100">3</div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 16.1%" aria-valuenow="16.1" aria-valuemin="0" aria-valuemax="100">5</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 32.3%" aria-valuenow="32.3" aria-valuemin="0" aria-valuemax="100">10</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 25.8%" aria-valuenow="25.8" aria-valuemin="0" aria-valuemax="100">8</div>
+                </div></td>
               <td>16</td>
               <td>14</td>
             </tr>
             <tr>
               <td>Октябрь</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-7" role="progressbar" style="width: 3.2%" aria-valuenow="3.2" aria-valuemin="0" aria-valuemax="100">1</div>
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 6.5%" aria-valuenow="6.5" aria-valuemin="0" aria-valuemax="100">2</div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 16.1%" aria-valuenow="16.1" aria-valuemin="0" aria-valuemax="100">5</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 22.6%" aria-valuenow="22.6" aria-valuemin="0" aria-valuemax="100">7</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 35.5%" aria-valuenow="35.5" aria-valuemin="0" aria-valuemax="100">11</div>
+                </div></td>
               <td>10</td>
               <td>9</td>
             </tr>
             <tr>
               <td>Ноябрь</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 6.9%" aria-valuenow="6.9" aria-valuemin="0" aria-valuemax="100">2</div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 17.2%" aria-valuenow="17.2" aria-valuemin="0" aria-valuemax="100">5</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 34.5%" aria-valuenow="34.5" aria-valuemin="0" aria-valuemax="100">10</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 27.6%" aria-valuenow="27.6" aria-valuemin="0" aria-valuemax="100">8</div>
+                </div></td>
               <td>6</td>
               <td>6</td>
             </tr>
             <tr>
               <td>Декабрь</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-7" role="progressbar" style="width: 3.1%" aria-valuenow="3.1" aria-valuemin="0" aria-valuemax="100">1</div>
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 12.5%" aria-valuenow="12.5" aria-valuemin="0" aria-valuemax="100">4</div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 18.8%" aria-valuenow="18.8" aria-valuemin="0" aria-valuemax="100">6</div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 34.4%" aria-valuenow="34.4" aria-valuemin="0" aria-valuemax="100">11</div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 21.9%" aria-valuenow="21.9" aria-valuemin="0" aria-valuemax="100">7</div>
+                </div></td>
               <td>1</td>
               <td>1</td>
             </tr>
           </table>
 
           <div class="text legend">
-            <div class="bg-7">7 Bft</div>
-            <div class="bg-6">6 Bft</div>
-            <div class="bg-5">5 Bft</div>
-            <div class="bg-4">4 Bft</div>
-            <div class="bg-3">3 Bft</div>
+            <div class="bg-7">14-17</div>
+            <div class="bg-6">11–14</div>
+            <div class="bg-5">8–11</div>
+            <div class="bg-4">6–8</div>
+            <div class="bg-3">3-6</div>
+            <div>м/с</div>
           </div>
 
 
