stats and text tunes

--- a/spots.html
+++ b/spots.html
@@ -223,7 +223,7 @@
 
           <p>Также по соседству с КБ расположен «Яхтклуб»&nbsp;<span class="badge badge-secondary">2</span>, располагающий большой инфраструктурой: прокат виндсерф оборудования, школа, мастерская. Немного ближе к городу в поселке Дельфин есть отличное место в восточной бухте, но спот работает только при западном ветре. На другой стороне Калининградского залива в бухте Приморская есть спот по редкое ЮВ направление.</p>
 
-          <p>Помимо кайтсерфинга и виндсерфинга, развивающегося семимильными шагами и насчитывающего более 300 человек, большую популярность приобретают и другие водные виды спорта: классический серфинг, сап-серфинг, бодибординг. А эти виды спорта требуют наличия хорошей морской волны, которая у нас в регионе бывает часто.</p>
+          <p>Помимо кайтсерфинга и виндсерфинга, насчитывающих более 300 человек, большую популярность приобретают и другие водные виды спорта: классический серфинг, сап-серфинг, бодибординг. А эти виды спорта требуют наличия хорошей морской волны, которая у нас в регионе бывает часто.</p>
 
           <img src="i/NorthShore.png" alt="Споты северного побережья Калининградской области" class="img-fluid text" />
 
@@ -235,7 +235,7 @@
 
           <p>В Зеленоградске на «Амбаре»&nbsp;<span class="badge badge-secondary">3</span> ломаются самые красивые волны благодаря правильной форме песчаного дна. Но частые волнорезы, узкая полоска пляжа, камни в воде и толпы отдыхающих туристов делают этот спот пригодным только для уверенных в себе кайтеров. Также на этом споте любят кататься сёрферы, но сильный ветер их разгоняет. Рядом есть платная парковка, несколько неплохих кафе и променад. В последние годы на споте появились камни и пни. Справа от «Амбара» есть разрушенные железные конструкции, остатки немецкого променада.</p>
 
-          <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Один из самых популярных спотов для любителей каталки на море. Большая парковка на 500 мест рядом с кэмпингом и строящейся базой сёрфинга König Surf Club. Есть кафе, выходящее прямо на пляж. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
+          <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Один из самых популярных спотов для любителей каталки на море. Большая платная парковка на 500 мест рядом с кэмпингом и базой сёрфинга König Surf Club. Есть кафе, выходящее прямо на пляж. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
 
           <p>Добраться до спота «Ветряки» в Куликово&nbsp;<span class="badge badge-secondary">5</span> не так просто из-за плохой дороги. На споте отсутствует какая-либо инфраструктура. У берега довольно много камней.</p>
 
@@ -249,7 +249,7 @@
           
           <p><strong>Западное побережье</strong>. Споты славятся своей безлюдностью и широкими пляжами. По всей береговой линии вы не встретите ни одного волнореза и других подводных препятствий от Балтийска до мыса Таран.</p>
 
-          <p>Самая западная точка РФ – Балтийск&nbsp;<span class="badge badge-secondary">7</span>. Бесспорно самые большие и ровные волны именно здесь. Но спот работает только при сильном ЮЗ, ЮЮЗ иди ЗЮЗ, что бывает нечасто, случается в основном в осенне-зимний период. Здесь наблюдаются сильные разрывные течения в районе мола, что делает спот крайне опасным для классического серфинга. Обычно в Балтийске дует меньше, чем на остальных спотах региона на 1-2 м/с.</p>
+          <p>Самая западная точка РФ – Балтийск&nbsp;<span class="badge badge-secondary">7</span>. Бесспорно самые большие и ровные волны именно здесь. Но спот работает только при сильном ветре ЮЗ, ЮЮЗ или ЗЮЗ направления, что бывает нечасто, случается в основном в осенне-зимний период. Здесь наблюдаются сильные разрывные течения в районе мола, что делает спот крайне опасным для классического серфинга. Обычно в Балтийске дует меньше, чем на остальных спотах региона на 1-2 м/с.</p>
 
           <p>Если нужно настоящее приключение, то отправляетесь в посёлок Донское на мыс Таран&nbsp;<span class="badge badge-secondary">12</span>, где вы встретите высокие обрывистые берега и нетронутый человеком шикарный пляж. От места парковки до пляжа спускаться около 30 минут.</p>
 
@@ -267,10 +267,10 @@
           <p><strong>Куршская коса</strong>. Национальный заповедник «Куршская коса» позволяет ловить ветер всех направлений со стороны моря или со стороны Куршского залива. Залив мелкий и практически пресноводный, не является судоходным, средняя глубина 3,5 метра. Летом залив прогревается до 25° C, при южных термическим ветрах можно кататься без гидрокостюма. Отличное место для новичков и любителей фристайла. Со стороны залива можно выделить 4 спота: 
 
           <ul>
-            <li>п. Каширское (ориентир аэропорт Храброво)&nbsp;<span class="badge badge-secondary">13</span></li>
-            <li>п. Лесное (турбаза Дюны)&nbsp;<span class="badge badge-secondary">14</span></li>
-            <li>п. Рыбачий (база отдыха «Альтримо»)&nbsp;<span class="badge badge-secondary">15</span></li>
-            <li>п. Морское (база отдыха Досуг)&nbsp;<span class="badge badge-secondary">16</span></li>
+            <li>посёлок Каширское (ориентир аэропорт Храброво)&nbsp;<span class="badge badge-secondary">13</span></li>
+            <li>посёлок Лесное (турбаза Дюны)&nbsp;<span class="badge badge-secondary">14</span></li>
+            <li>посёлок Рыбачий (база отдыха «Альтримо»)&nbsp;<span class="badge badge-secondary">15</span></li>
+            <li>посёлок Морское (база отдыха Досуг)&nbsp;<span class="badge badge-secondary">16</span></li>
           </ul>
 
 
@@ -279,13 +279,14 @@
           <p>Споты Куршской косы со стороны Балтийского моря:</p>
 
           <ul>
-            <li>пос. Лесное&nbsp;<span class="badge badge-secondary">17</span></li>
-            <li>пос. Рыбачий&nbsp;<span class="badge badge-secondary">18</span></li>
-            <li>пос. Морское&nbsp;<span class="badge badge-secondary">19</span></li>
+            <li>посёлок Лесное&nbsp;<span class="badge badge-secondary">17</span></li>
+            <li>посёлок Рыбачий&nbsp;<span class="badge badge-secondary">18</span></li>
+            <li>посёлок Морское&nbsp;<span class="badge badge-secondary">19</span></li>
+            <li>14-ый километр</li>
           </ul>
 
 
-          <p>При западном направлении ветра особенной популярностью служит маршрут пос. Лесное — пос. Морское (даунвинд), протяженностью 40 км. При северных направлениях можно повторить маршрут в обратном направлении. Споты Куршской косы живописны и безопасны, там нет волнорезов и подводных валунов.</p>
+          <p>При западном направлении ветра особенной популярностью служит маршрут пос. Лесное — пос. Морское (даунвинд), протяженностью 40 км. При северных направлениях можно повторить маршрут в обратном направлении. Споты Куршской косы живописны и безопасны, там нет волнорезов и подводных валунов. Чтобы вернуться в место старта используют помощь таксистов, которые живут на Косе (1000 ₽ в один конец на автомобиле).</p>
           
         </div>
     </div>
