--- a/spots.html
+++ b/spots.html
@@ -213,7 +213,7 @@
 
           <h4>Споты</h4>
 
-          <p><strong>Калининградский залив</strong>. Здесь расположен знаменитый КБ (Кайтбич)&nbsp;<span class="badge badge-secondary">1</span>, где зародился кайтсерфинг в регионе — самый популярный кайтспот. С мая по октябрь несколько кайт-школ ведут здесь обучение, федерация водных видов спорта проводят соревнования по фристайлу и курс-рейсу, отмечаются открытие и закрытие сезона. Песчаная коса с радиусом  почти 180° и 50-ти метровая отмель являются хорошими условиями для безопасного обучения и кайтсерфинга. Эффект Вентури усиливает ветер на Кайтбиче на 1—2 м/с, обычно здесь дует сильнее всего региона.</p>
+          <p><strong>Калининградский залив</strong>. Здесь расположен знаменитый КБ (Кайтбич)&nbsp;<span class="badge badge-secondary">1</span>, где зародился кайтсерфинг в регионе — самый популярный кайтспот. С мая по октябрь несколько кайт-школ ведут здесь обучение, федерация водных видов спорта проводят соревнования по фристайлу и курс-рейсу, отмечаются открытие и закрытие сезона. Песчаная коса с радиусом  почти 180° и 50-ти метровая отмель являются хорошими условиями для безопасного обучения и кайтсерфинга. Эффект Вентури усиливает ветер на Кайтбиче на 1–2 м/с, обычно здесь дует сильнее всего региона.</p>
 
           <p>Также по соседству с КБ расположен «Яхтклуб»&nbsp;<span class="badge badge-secondary">2</span>, располагающий большой инфраструктурой: прокат виндсерф оборудования, школа, мастерская. Немного ближе к городу в поселке Дельфин есть отличное место в восточной бухте, но спот работает только при западном ветре. На другой стороне Калининградского залива в бухте Приморская есть спот по редкое ЮВ направление.</p>
 
@@ -225,11 +225,11 @@
 
           <p>Лучшие направления для этих мест: З, С-З, С-В, В. Наилучшие волны приходят при движении ветра и волны по касательной к берегу, в начале шторма. При северном ветре будут сложности с волнорезами, кроме Куликово, где их нет. При западном ветре можно сделать даунвинд по традиционному направлению п. Малиновка — п. Лесное, но маршрут не для новичков, так как встречается много волнорезов и других подводных опасностей. Из Калининграда до Зеленоградска можно комфортно и быстро добраться по трассе «Приморское кольцо», в среднем 15 мин.</p>
 
-          <p>При волнении от 1.5 метров высотой появляется «второй прибой» примерно в 200-300 метрах от берега.</p>
+          <p>При волнении от 1.5 метров высотой появляется «второй прибой» примерно в 200–300 метрах от берега.</p>
 
           <p>В Зеленоградске на «Амбаре»&nbsp;<span class="badge badge-secondary">3</span> ломаются самые красивые волны благодаря правильной форме песчаного дна. Но частые волнорезы, узкая полоска пляжа, камни в воде и толпы отдыхающих туристов делают этот спот пригодным только для уверенных в себе кайтеров. Также на этом споте любят кататься сёрферы, но сильный ветер их разгоняет. Рядом есть платная парковка, несколько неплохих кафе и променад. В последние годы на споте появились камни и пни. Справа от «Амбара» есть разрушенные железные конструкции, остатки немецкого променада.</p>
 
-          <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Один из самых популярных спотов для любителей каталки на море. Большая платная парковка на 500 мест рядом с кэмпингом и базой сёрфинга König Surf Club. Есть кафе, выходящее прямо на пляж. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
+          <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> <a href="https://goo.gl/maps/Cdft8NMGmVPE9Hei9" class="badge badge-primary">P</a> волны чуть хуже, но много места для запуска, почти нет волнорезов. Один из самых популярных спотов для любителей каталки на море. Большая платная парковка на 500 мест рядом с кэмпингом и базой сёрфинга König Surf Club. Есть кафе, выходящее прямо на пляж. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
 
           <p>Добраться до спота «Ветряки» в Куликово&nbsp;<span class="badge badge-secondary">5</span> не так просто из-за плохой дороги. На споте отсутствует какая-либо инфраструктура. У берега довольно много камней.</p>
 
