--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="css/style.css">
 
     <title>Кайтсерфинг в Калининграде</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/i/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/i/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/i/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/i/favicons/site.webmanifest">
+    <link rel="mask-icon" href="/i/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/i/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/i/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
   </head>
   <body>
     <div class="jumbotron jumbotron-fluid">
