--- a/meteo.html
+++ b/meteo.html
@@ -11,6 +11,23 @@
 
     <title>Метеостанции Калининграда</title>
 
+    <meta name="title" content="Метеостанции в Калининграде">
+    <meta name="description" content="Метеостанции, споты, чатики, полезные ссылки">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kitekgd.dandaka.com/">
+    <meta property="og:title" content="Кайтсерфинг в Калининграде">
+    <meta property="og:description" content="Метеостанции, споты, чатики, полезные ссылки">
+    <meta property="og:image" content="https://kitekgd.dandaka.com/i/OG.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://kitekgd.dandaka.com/">
+    <meta property="twitter:title" content="Кайтсерфинг в Калининграде">
+    <meta property="twitter:description" content="Метеостанции, споты, чатики, полезные ссылки">
+    <meta property="twitter:image" content="https://kitekgd.dandaka.com/i/OG.png">
+
     <link rel="apple-touch-icon" sizes="180x180" href="/i/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/i/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/i/favicons/favicon-16x16.png">
