img from kulikovo

--- a/meteo.html
+++ b/meteo.html
@@ -51,6 +51,9 @@
           <iframe class="iframe-weatherlink" src="https://www.weatherlink.com/embeddablePage/show/bfe318c32b3441cea991c0e682c92bfc/signature" frameborder="0"></iframe>
           <iframe class="iframe-weatherlink" src="https://www.weatherlink.com/embeddablePage/show/c3d5f440b1df40d9890ef909c7edbc16/signature" frameborder="0"></iframe>
           <iframe class="iframe-weatherlink" src="https://www.weatherlink.com/embeddablePage/show/02d95cfa81c642208828db43e053aff2/signature" frameborder="0"></iframe>
+          <div class="meteo-kulikovo">
+            <img src="http://1chip.ru/tmp_wind/0223wind.png" alt="Метеостанция в Куликово ветер" class="img-meteo-kulikovo">
+          </div>
           <p><a href="http://1chip.ru/wind.html">Метеостанция в Куликово</a></p>
         </div>
     </div>
