--- a/index.html
+++ b/index.html
@@ -60,14 +60,16 @@
 
           <h4>Инструктора, школы, сервис</h4>
           <ul>
-            <li>Загораев Артем, <a href="http://kite4you.ru/">Kite4you</a>, кайт</li>
-            <li><a href="https://www.facebook.com/oleg.gorodnichev">Городничев Олег "Дельфин"</a>, кайт, сливы по Косе</li>
-            <li>Балякин Александр, <a href="https://vk.com/tortugakgd">Торгуга</a>, вейк за катером, вейксерфинг, кайт, SUP</li>
-            <li>Липовская Юлия, кайт</li>
-            <li>Исаков Евгений, <a href="http://konigsurf.club/">König Surf Club</a>, сёрфинг, SUP</li>
-            <li>Аня Матвеева, <a href="https://www.instagram.com/balticsupsurf/">Baltic Sup & Surf</a>, сёрфинг и SUP</li>
+            <li><a href="https://www.facebook.com/oleg.gorodnichev">Городничев Олег "Дельфин"</a>, инструктор по кайту</li>
+            <li>Загораев Артем, <a href="http://kite4you.ru/">Kite4you</a>, инструктор по кайту</li>
+            <li>Балякин Александр, <a href="https://vk.com/tortugakgd">Торгуга</a>, инструктор по вейку за катером, вейксерфинг, кайт, SUP</li>
+            <li>Липовская Юлия, инструктор по кайту</li>
+            <li>Исаков Евгений, <a href="http://konigsurf.club/">König Surf Club</a>, инструктор по сёрфингу, SUP</li>
+            <li>Аня Матвеева, <a href="https://www.instagram.com/balticsupsurf/">Baltic Sup & Surf</a>, инструктор по сёрфингу и SUP</li>
+            <li><a href="https://kiteclinic.ru/">Kite Clinic</a>, ремонт кайтов, шейпинг сёрф досок</li>
             <li>Левинец Владимир, виндсерфинг, ремонт кайтов</li>
             <li><a href="https://www.instagram.com/wakefamily39/">Wake Family 39</a>, вейк за лебедкой</li>
+            <li><a href="tel:+7 (911) 461-58-36">Василий Александрович</a>, таксист на Косе</li>
           </ul>
 
           <h4>Видео</h4>
